--- a/ProductHunt/Base.lproj/Main.storyboard
+++ b/ProductHunt/Base.lproj/Main.storyboard
@@ -16,19 +16,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MXB-kf-uir" userLabel="Feed Table View">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MXB-kf-uir" userLabel="Feed Table View">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="postCell" rowHeight="250" id="Wnz-lA-Fgy">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="250"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wnz-lA-Fgy" id="5mb-bJ-eMp">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gjr-8W-4s5">
+                                                    <rect key="frame" x="20" y="11" width="374" height="228"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="f7t-6D-h0i">
+                                                            <rect key="frame" x="244" y="0.0" width="130" height="14.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9Y-cE-KV8">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="75.5" height="14.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votes: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2a-Nc-Yhn">
+                                                                    <rect key="frame" x="83.5" y="0.0" width="46.5" height="14.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4x-lP-TTI">
+                                                            <rect key="frame" x="0.0" y="0.0" width="232" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCI-3n-Tto">
+                                                            <rect key="frame" x="0.0" y="213.5" width="374" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="Adw-fc-3E9">
+                                                            <rect key="frame" x="8" y="32" width="358" height="173.5"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="cCI-3n-Tto" secondAttribute="bottom" id="5Ho-do-CpG"/>
+                                                        <constraint firstAttribute="trailing" secondItem="cCI-3n-Tto" secondAttribute="trailing" id="64c-ZD-5hc"/>
+                                                        <constraint firstAttribute="trailing" secondItem="f7t-6D-h0i" secondAttribute="trailing" id="GzU-mH-prT"/>
+                                                        <constraint firstItem="g4x-lP-TTI" firstAttribute="leading" secondItem="gjr-8W-4s5" secondAttribute="leading" id="I0u-FX-asc"/>
+                                                        <constraint firstItem="Adw-fc-3E9" firstAttribute="leading" secondItem="gjr-8W-4s5" secondAttribute="leading" constant="8" id="LXK-qY-9Xs"/>
+                                                        <constraint firstItem="f7t-6D-h0i" firstAttribute="top" secondItem="gjr-8W-4s5" secondAttribute="top" id="Sk0-sU-sbQ"/>
+                                                        <constraint firstItem="Adw-fc-3E9" firstAttribute="top" secondItem="g4x-lP-TTI" secondAttribute="bottom" constant="8" id="Y79-c8-q4N"/>
+                                                        <constraint firstItem="cCI-3n-Tto" firstAttribute="leading" secondItem="gjr-8W-4s5" secondAttribute="leading" id="YFa-OK-F60"/>
+                                                        <constraint firstItem="cCI-3n-Tto" firstAttribute="top" secondItem="Adw-fc-3E9" secondAttribute="bottom" constant="8" id="h7k-gK-n7L"/>
+                                                        <constraint firstItem="f7t-6D-h0i" firstAttribute="leading" secondItem="g4x-lP-TTI" secondAttribute="trailing" constant="12" id="iLB-s4-Maf"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Adw-fc-3E9" secondAttribute="trailing" constant="8" id="rhG-D9-pyP"/>
+                                                        <constraint firstItem="g4x-lP-TTI" firstAttribute="top" secondItem="gjr-8W-4s5" secondAttribute="top" id="wnl-aj-Ihh"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="gjr-8W-4s5" firstAttribute="bottom" secondItem="5mb-bJ-eMp" secondAttribute="bottomMargin" id="3mx-o9-WvI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="gjr-8W-4s5" secondAttribute="trailing" id="Q6d-Mj-d70"/>
+                                                <constraint firstItem="gjr-8W-4s5" firstAttribute="leading" secondItem="5mb-bJ-eMp" secondAttribute="leadingMargin" id="hSp-si-qqw"/>
+                                                <constraint firstItem="gjr-8W-4s5" firstAttribute="top" secondItem="5mb-bJ-eMp" secondAttribute="topMargin" id="q3Q-yD-Zkh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="MXB-kf-uir" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0Kh-Gd-t1B"/>
-                            <constraint firstItem="MXB-kf-uir" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8Hz-Xp-NwH"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MXB-kf-uir" secondAttribute="trailing" id="xRo-ao-B4k"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MXB-kf-uir" secondAttribute="bottom" id="zsW-s0-4iP"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Feed" id="6vY-OF-Nk4"/>
                     <connections>
@@ -59,6 +124,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="placeholder.png" width="350" height="160"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
